# Cmd2Action_ROS1

./: .gitignore  README.md
src/arm_application/: CMakeLists.txt  package.xml  setup.py
src/arm_application/arm_application/: config.py
src/arm_application/arm_application/agents/: [DELETE]task_agent.py  __init__.py  agent.py  object_detector.py
src/arm_application/arm_application/controllers/: [DELETE]scara_controller_origin.py  __init__.py  abstract_controller.py  scara_controller.py
src/arm_application/arm_application/llm/: llm.py
src/arm_application/arm_application/nodes/: [DELETE]my_scara_action.py  [DELETE]simple_demo.py  main_node.py
src/arm_application/arm_application/planners/: task_planner.py
src/arm_application/arm_application/utils/: gazebo_box_display.py  gazebo_cylinder_display.py  logger.py  my_kinematics.py
src/arm_application/msg/: LLMCommands.msg
src/arm_application/src/: gazebo_box_display.py  moveit_controller.py  my_kinematics.py  my_scara_action.py  scara_controller.py  simple_demo.py  task_agent.py
src/arm_application/srv/: AgentCommands.srv
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/config/: controllers.yaml
src/arm_description/launch/: display.launch  gazebo.launch  urdf.rviz
src/arm_description/urdf/: base.urdf.xacro  camera_d435i.urdf.xacro  camera_gripper.urdf.xacro  robot.ros2_control.xacro  robot.ros_control.xacro  scara.urdf.xacro  world_camera.urdf.xacro
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: fake_controllers.yaml  gazebo_scara_robot.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  scara_robot.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml
src/arm_moveit_config/launch/: gazebo.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml
src/arm_vision/: CMakeLists.txt  package.xml
src/arm_vision/launch/: vision.launch
src/arm_vision/msg/: DetectedObject.msg  DetectedObjectPool.msg
src/arm_vision/src/: __init__.py  config.py  coordinate_transformer.py  detector.py  gripper_vision.py  my_vision.py  object_data_collector.py  vision_loss.py  vision_node.py  visualizer.py
src/arm_vision/test_results/: ave_opt.csv  liner_opt.csv  no_opt.csv  no_opt_y.csv
src/qt_gui/: main.py  main_window.py
